--- a/medical.css
+++ b/medical.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    20/09/2021
+Last change:    13/11/2021
 Author:    creativemaze
 Primary use:    Medical
 -------------------------------------------------------------------*/
@@ -119,18 +119,20 @@ ul{
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
-	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 22px;
-	font-weight: 700;
-	letter-spacing: 1px;
-	text-transform: uppercase;
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px; 	
 }
 
 .navbar-header a.navbar-brand{
 	text-decoration: none;
 	color: #111111;
 	transition: 0.5s;
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-size: 22px;
+	font-weight: 700;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	padding-top: 30px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -138,7 +140,7 @@ ul{
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -961,7 +963,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .bg_button a:hover{
-	opacity: 0.6;
+	color: #111111;
 }
 
 .medical_nav{
@@ -1131,14 +1133,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 40px;
 	padding-bottom: 40px;
 }
 
 .blog_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 0 25px;
+	padding: 40px 25px 0;
 }
 
 .blog_box{
@@ -1182,15 +1183,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	line-height: 1.4em;
 }
 
-.blog_title a:hover,
-a.blog_btn:hover{
+.blog_title a:hover{
 	opacity: 0.6;
 }
 
 a.blog_btn{
 	width: 120px;	
     border: none;
-    color: #2b32b2;
+    color: #26d0ce;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -1228,6 +1228,10 @@ a.blog_btn::after{
 	line-height: 1.5em;
 }
 
+a.blog_btn:hover{
+	color: #111111;
+}
+
 /* --- 3.6. Medical Area Six --- */
 .medical_area_six{
 	width: 100%;
@@ -1262,6 +1266,7 @@ a.blog_btn::after{
 .medical_area_seven{
 	max-width: 1280px;
 	margin: 0 auto;
+	padding: 0 10px;
 	margin-top:  -100px;
 	position: relative;
 	z-index: 9999;
@@ -1329,12 +1334,6 @@ a.blog_btn::after{
 .medical_group_eight{
 	width: 100%;
 	padding-top: 20px;
-}
-
-.client-slider{
-	max-width: 1200px;
-	margin: auto;
-	display: block;
 	text-align: center;
 }
 
@@ -1471,12 +1470,22 @@ li.slick-active button{
 
 /* --- 3.9. Medical Area Nine --- */
 .medical_area_nine{
-	max-width: 1280px;
-	margin: 0 auto 7em;
-	padding: 0 25px;
+	width: 100%;
+	margin: 0 0 2em;
+	min-height: 350px;
+	background-color: #2b32b2;
+	padding: 6em 0;
 }
 
 .medical_group_nine{
+	max-width: 1280px;
+	margin: auto;
+	padding: 0 25px;
+	position: relative;
+	z-index: 9;
+}
+
+.form_group{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -1505,7 +1514,7 @@ li.slick-active button{
 	font-size: 14px;
 	font-weight: 600;
 	display: block;
-	color: #111111;
+	color: #d2d2d2;
 	text-transform: capitalize;
 	text-align: left;
 	padding: 8px 0;
@@ -1518,19 +1527,30 @@ li.slick-active button{
 	font-weight: 900;
 	font-size: 15px;
 	padding-right: 12px;
-	color: #26d0ce;
+	color: #ffffff;
 }
 
 .form_col_box h2{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 30px;
+	font-size: 40px;
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-align: left;
 	display: block;
-	color: #2b32b2;
+	color: #ffffff;
 	line-height: 1.3em;
-	padding-bottom: 15px;
+}
+
+.form_col_box p{
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 16px;
+	font-weight: normal;
+	display: block;
+	color: #f2f2f2;
+	letter-spacing: 1px;
+	text-align: left;
+	padding: 12px 0;
+	line-height: 1.5em;
 }
 
 .form-box{
@@ -1556,7 +1576,8 @@ li.slick-active button{
 	flex-grow: 1;
 	letter-spacing: 1px;
 	transition: 0.5s;
-	background-color: #f6f6f6;
+	background: transparent;
+	color: #ffffff;
 }
 
 .form-box textarea{
@@ -1571,7 +1592,8 @@ li.slick-active button{
 	flex-grow: 1;
 	letter-spacing: 1px;
 	transition: 0.5s;
-	background-color: #f6f6f6;
+	background: transparent;
+	color: #ffffff;
 }
 
 .form-box input[type="text"]:focus,
@@ -1589,17 +1611,17 @@ li.slick-active button{
 	font-size: 14px;
 	font-weight: 600;
 	text-transform: uppercase;
-	color: #ffffff;
+	color: #26d0ce;
 	letter-spacing: 1px;
-	background-color: #26d0ce;
-	border: solid 1px #26d0ce;
+	background-color: #ffffff;
+	border: solid 1px #ffffff;
 	transition: 0.5s;
 }
 
 .form-box input[type="submit"]:hover{
-	background-color: #111111;
+	background: transparent;
 	color: #ffffff;
-	border-color: #111111;
+	border-color: #ffffff;
 }
 
 /* 4. FOOTER
@@ -1610,7 +1632,6 @@ li.slick-active button{
 	position: relative;
 	clear: both;
 	height: 100%;
-	background-color: #2b32b2;
 }
 
 .footer_area{
@@ -1626,10 +1647,11 @@ li.slick-active button{
 	width: 25%;
 	padding: 0 20px;
 	max-width: 300px;
+	margin: 0 auto;
 }
 
 .footer_col{
-	padding-top: 4.5em;
+	padding-top: 3.5em;
 }
 
 a.footer-brand img{
@@ -1645,7 +1667,7 @@ a.footer-brand img{
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	text-decoration: none;
-	color: #ffffff;
+	color: #111111;
 	text-align: left;
 }
 
@@ -1654,7 +1676,7 @@ a.footer-brand img{
 	font-size: 14px;
 	font-weight: normal;
 	letter-spacing: 1px;
-	color: #ffffff;
+	color: #111111;
 	text-align: left;
 	padding: 20px 0;
 	line-height: 1.5em;
@@ -1667,7 +1689,7 @@ a.footer-brand img{
 .footer_social .fab,
 .footer_social .fa{
 	font-size: 16px;
-	color: #ffffff;
+	color: #111111;
 	text-align: left;
 }
 
@@ -1691,8 +1713,8 @@ a.footer-brand img{
 	font-size: 18px;
 	font-weight: 700;
 	letter-spacing: 1px;
-	text-transform: capitalize;
-	color: #ffffff;
+	color: #111111;
+	line-height: 1.4em;
 }
 
 .footer_col > ul > li{
@@ -1705,7 +1727,7 @@ a.footer-brand img{
 	font-weight: normal;
 	letter-spacing: 1px;
 	text-decoration: none;
-	color: #ffffff;
+	color: #111111;
 	text-align: justify;
 	transition: 0.5s;
 }
@@ -1723,7 +1745,7 @@ a.footer-brand img{
 	width: 100%;
 	padding: 12px 10px 14px;
 	background-color: #f6f6f6;
-	border: none;
+	border: 0;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
 	font-weight: 600;
@@ -1743,22 +1765,22 @@ a.footer-brand img{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 14px;
 	font-weight: 500;
-	margin-top: 20px;
 	text-transform: uppercase;
+	margin-top: 20px;
 	width: 100%;
 	margin-left: 0;
 	color: #ffffff;
 	border-radius: 0;
 	letter-spacing: 1px;
-	background-color: transparent;
-	border: solid 1px #ffffff;
+	background-color: #26d0ce;
+	border: solid 1px #26d0ce;
 	transition: 0.5s;
 }
 
 .col_info input[type="submit"]:hover{
-	background-color: #ffffff;
+	background: transparent;
 	color: #111111;
-	border-color: #ffffff;
+	border-color: #111111;
 }
 
 .col_info input[type="email"]:focus{
@@ -1771,7 +1793,7 @@ a.footer-brand img{
 	padding-top: 35px;
 	padding-bottom: 10px;
 	margin-top: 35px;
-	border-top: solid 1px #6f6f6f;
+	border-top: solid 1px #e0e0e0;
 }
 
 .details p{
@@ -1779,9 +1801,9 @@ a.footer-brand img{
 	font-size: 13px;
 	font-weight: normal;
 	letter-spacing: 1px;
-	color: #ffffff;
+	color: #111111;
 	text-align: center;
-}
+} 
 
 /* 5. RESPONSIVE
  ----------- */
@@ -1808,7 +1830,6 @@ a.footer-brand img{
 	.medical_box_col{
 		flex: 100%;
 		width: 100%;
-		
 	}
 	
 	.medical_box_col{
@@ -1818,7 +1839,6 @@ a.footer-brand img{
 	.blog_col{
 		flex: 50%;
 		width: 50%;
-		margin-bottom: 40px;
 	}
 } 
  
@@ -1836,8 +1856,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		margin-top: 7px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -1955,12 +1975,13 @@ a.footer-brand img{
 	
 	.medical_head,
 	.bg_head,
-	.wide_box h2{
+	.wide_box h2,
+	.form_col_box h2{
 		font-size: 30px;
 	}
 	
 	.medical_slide{
-		padding-left: 0;
+		padding: 0 10px;
 	}
 	
 	.cube_col{
@@ -1982,21 +2003,6 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
-	.footer_col{
-		flex: 100%;
-		width: 100%;
-	}
-}
-
-@media only screen and (max-width: 420px){
-	.square_col,
-	.service_col,
-	.medical_wide_col,
-	.medical_box_col,
-	.blog_col{
-		padding: 0;
-	}
-	
 	.count_col{
 		flex: 100%;
 		width: 100%;
@@ -2012,6 +2018,23 @@ a.footer-brand img{
 	
 	.second_icon .fas{
 		color: #26d0ce;
+	}
+	
+	.footer_col{
+		flex: 100%;
+		width: 100%;
+		margin: 0;
+	}
+}
+
+@media only screen and (max-width: 420px){
+	.square_col,
+	.service_col,
+	.medical_wide_col,
+	.medical_box_col,
+	.blog_col{
+		padding-left: 0;
+		padding-right: 0;
 	}
 }
 
