--- a/seo-agency.css
+++ b/seo-agency.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    25/09/2021
-Author:    Themewiz
+Last change:    14/11/2021
+Author:    creativemaze
 Primary use:    SEO Agency
 -------------------------------------------------------------------*/
 
@@ -32,7 +32,7 @@ Primary use:    SEO Agency
 -------------------------------------------------------------------*/
 
 /* 1. GENERAL
- ----------- */
+ ----------- */ 
 body,
 html{
 	width:100%;
@@ -136,20 +136,20 @@ ul{
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
-	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 22px;
-	font-weight: 700;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	margin: 0;
-	padding-top: 10px;
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px; 	
 }
 
 .navbar-header a.navbar-brand{
 	text-decoration: none;
 	color: #111111;
 	transition: 0.5s;
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-size: 22px;
+	font-weight: 700;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	padding-top: 30px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -157,7 +157,7 @@ ul{
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -521,7 +521,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 40px;
+	padding-top: 30px;
 }
 
 .square_col{
@@ -777,7 +777,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 /* --- 3.5. SEO Area Five --- */
 .seo_area_five{
-	max-width: 1400px;
+	max-width: 1280px;
 	margin: 0 auto 9em;
 	margin-top:  -300px;
 	padding: 0 25px;
@@ -814,7 +814,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	line-height: 1.5em;
 	letter-spacing: 1px;
 	text-align: center;
-	padding-bottom: 12px;
 	text-transform: uppercase;
 }
 
@@ -825,7 +824,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .seo_icon_box{
-	max-width: 350px;
+	max-width: 300px;
 	margin: auto;
 	text-align: center;
 }
@@ -876,14 +875,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 40px;
 	padding-bottom: 30px;
 }
 
 .price_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 0 25px;
+	padding: 30px 25px 0;
 }
 
 .price_box{
@@ -1155,7 +1153,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	margin: 0 0 9em;
 	min-height: 400px;
-	padding: 6em 25px;
+	padding: 7em 25px;
 	background-color: #eeeeee;
 }
 
@@ -1165,14 +1163,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 40px;
-	padding-bottom: 40px;
+	padding-bottom: 30px;
 }
 
 .blog_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 0 20px;
+	padding: 30px 20px 0;
 }
 
 .blog_box{
@@ -1182,7 +1179,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	margin: auto;
 	min-height: 150px;
-	transition: 0.5s;
 }
 
 .blog_image{
@@ -1198,7 +1194,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-top: 12px;
 	padding-left: 12px;
 	background-color: #ffffff;
-	transition: ease-in-out 0.5s;
 }
 
 .blog_content{
@@ -1309,7 +1304,6 @@ a.blog_btn:hover{
 .seo_group_nine{
 	width: 100%;
 	text-align: center;
-	padding-top: 10px;
 	padding-bottom: 20px;
 	position: relative;
 }
@@ -1331,7 +1325,7 @@ a.blog_btn:hover{
 	text-align: center;
 	display: block;
 	background-color: #ffffff;
-	border: solid 1px #e0e0e0;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
 .client_info img{
@@ -1411,11 +1405,11 @@ a.blog_btn:hover{
 }
 
 li.slick-active button{
-	background-color: #111111;
+	background-color: #fcb045;
 }
 
 .slick-dots button:hover{
-	background-color: #111111;
+	background-color: #fcb045;
 }
 
 .slick-dots li{
@@ -1445,7 +1439,7 @@ li.slick-active button{
 .col_info{
 	flex: 50%;
 	width: 50%;
-	margin-top: 15px;
+	margin-top: 35px;
 }
 
 .col_head h3{
@@ -1458,7 +1452,6 @@ li.slick-active button{
 	text-align: left;
 	line-height: 1.3em;
 	max-width: 500px;
-	margin-top: 0;
 }
 
 .subscribe-row{
@@ -1527,6 +1520,7 @@ li.slick-active button{
 	width: 25%;
 	padding: 0 20px;
 	max-width: 300px;
+	margin: 0 auto;
 }
 
 .footer_col{
@@ -1686,7 +1680,6 @@ a.footer-brand img{
 	.blog_col{
 		flex: 50%;
 		width: 50%;
-		margin-bottom: 40px;
 	}
 	
 	.seo_icon_col{
@@ -1743,8 +1736,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		padding-top: 5px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -1824,7 +1817,6 @@ a.footer-brand img{
 	.price_col{
 		flex: 100%;
 		width: 100%;
-		margin-bottom: 40px;
 	}
 	
 	.seo_wide_col,
@@ -1867,6 +1859,11 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
+	.data_col{
+		flex: 100%;
+		width: 100%;
+	}
+	
 	.blog_col{
 		flex: 100%;
 		width: 100%;
@@ -1887,17 +1884,13 @@ a.footer-brand img{
 	.footer_col{
 		flex: 100%;
 		width: 100%;
+		margin: 0;
 	}
 }
 
 @media only screen and (max-width: 420px){
 	.slide__box h2{
 		font-size: 30px;
-	}
-	
-	.data_col{
-		flex: 100%;
-		width: 100%;
 	}
 	
 	.slide__left,
@@ -1917,5 +1910,11 @@ a.footer-brand img{
 	
 	.col_head h3{
 		font-size: 25px;
+	}
+}
+
+@media only screen and (max-width: 320px){
+	.col_head h3{
+		font-size: 20px;
 	}
 }
