--- a/digital-media.css
+++ b/digital-media.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    05/10/2021
+Last change:    16/11/2021
 Author:    creativemaze
 Primary use:    Digital Media
 -------------------------------------------------------------------*/
@@ -120,20 +120,20 @@ ul{
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
-	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 22px;
-	font-weight: 700;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	margin: 0;
-	padding-top: 12px
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px; 	
 }
 
 .navbar-header a.navbar-brand{
 	text-decoration: none;
 	color: #ffffff;
 	transition: 0.5s;
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-size: 22px;
+	font-weight: 700;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	padding-top: 30px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -141,7 +141,7 @@ ul{
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -760,7 +760,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .content_box{
-	max-width: 350px;
+	max-width: 300px;
 	margin: auto;
 	padding: 30px 15px;
 	text-align: center;
@@ -792,7 +792,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .content_box .fas,
 .content_box .far{
-	font-size: 30px;
+	font-size: 35px;
 	color: #43cea2;
 	display: block;
 }
@@ -1126,13 +1126,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
-	padding: 40px 0;
+	padding-bottom: 40px
 }
 
 .price_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 0 25px;
+	padding: 40px 25px 0;
 }
 
 .price_box{
@@ -1909,6 +1909,7 @@ a.blog_comments{
 	width: 25%;
 	padding: 0 20px;
 	max-width: 300px;
+	margin: 0 auto;
 }
 
 .footer_col{
@@ -2066,12 +2067,12 @@ a.footer-brand img{
 	.digital_left_col{
 		flex: 100%;
 		width: 100%;
-		padding-bottom: 60px;
 	}
 	
 	.digital_right_col{
 		flex: 100%;
 		width: 100%;
+		margin-top: 50px;
 	}
 	
 	.square_col{
@@ -2093,12 +2094,6 @@ a.footer-brand img{
 		width: 50%;
 		margin-bottom: 25px;
 	}
-	
-	.blog_col{
-		flex: 50%;
-		width: 50%;
-		margin-bottom: 40px;
-	}
 }
 
 @media only screen and (max-width: 992px){
@@ -2115,8 +2110,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		padding-top: 5px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -2202,25 +2197,21 @@ a.footer-brand img{
 		margin-bottom: 20px;
 	}
 	
-	.square_col{
-		flex: 100%;
-		width: 100%;
-	}
-	
-	.first_border{
-		border-right: none;
-	}
-	
 	.price_col{
 		flex: 100%;
 		width: 100%;
-		margin-bottom: 40px;
 	}
 	
 	.count_col{
 		flex: 50%;
 		width: 50%;
 		margin-bottom: 30px;
+	}
+
+	.blog_col{
+		flex: 100%;
+		width: 100%;
+		margin-bottom: 40px;
 	}	
 	
 	.footer_col{
@@ -2246,12 +2237,20 @@ a.footer-brand img{
 		margin-bottom: 40px;
 	}
 	
-	.cube_col{
+	.digital_right_col{
+		margin-top: 10px;
+	}
+	
+	.square_col{
 		flex: 100%;
 		width: 100%;
 	}
 	
-	.blog_col{
+	.first_border{
+		border-right: none;
+	}
+	
+	.cube_col{
 		flex: 100%;
 		width: 100%;
 	}
@@ -2268,10 +2267,16 @@ a.footer-brand img{
 	.footer_col{
 		flex: 100%;
 		width: 100%;
+		margin: 0;
 	}
 }
 
 @media only screen and (max-width: 420px){
+	.main_content{
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+	
 	.content_slide{
 		padding-right: 0;
 	}
@@ -2287,7 +2292,8 @@ a.footer-brand img{
 	.cube_col,
 	.blog_col,
 	.register_col{
-		padding: 0;
+		padding-left: 0;
+		padding-right: 0;
 	}
 	
 	.blog_title a{
@@ -2306,11 +2312,6 @@ a.footer-brand img{
 }
 
 @media only screen and (max-width: 385px){
-	.main_content{
-		padding-left: 20px;
-		padding-right: 20px;
-	}
-	
 	.client_info img{
 		width: 60px;
 		height: 60px;
@@ -2325,6 +2326,10 @@ a.footer-brand img{
 	.heading_group{
 		padding-left: 15px;
 		padding-right: 15px;
+	}
+	
+	.title_head{
+		padding-left: 6px;
 	}
 }
 
